2008-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-send-mail-with-sendmail):
	Display the error message.

2008-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-default-article-saver):
	Add gnus-summary-save-in-pipe to choices.
	(gnus-summary-save-in-pipe): Add :decode and :headers properties; use
	gnus-summary-pipe-output-default-command as the default command.
	(gnus-summary-pipe-to-muttprint): Update gnus-summary-muttprint-program
	instead of gnus-last-shell-command.

	* gnus-sum.el (gnus-summary-pipe-output-default-command): New user
	option.
	(gnus-summary-muttprint-program): Mention the value will be changed.
	(gnus-summary-save-article): Force showing of all headers.
	(gnus-summary-pipe-output): Work with the 2nd argument HEADERS.

2008-07-01  Rupert Swarbrick  <rswarbrick@googlemail.com>  (tiny change)

	* gnus-score.el (gnus-score-find-trace): Add "Total score" line.

2008-07-02  Juanma Barranquero  <lekktu@gmail.com>

	* nnimap.el (nnimap-id):
	* sieve-manage.el (sieve-manage-open): Doc fixes.

2008-07-02  Francesc Rocher  <rocher@member.fsf.org>

	* gnus.el (gnus-group-startup-message): Prefer SVG or PNG image,
	if available.

2008-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-with-multibyte, mm-with-unibyte): Remove.

	* nnkiboze.el (nnkiboze-generate-group):
	Use explicit mm-disable-multibyte rather than mm-with-unibyte.

	* nnmairix.el: Require CL.

2008-06-15  David Engster  <dengste@eml.cc>

	* nnimap.el (nnimap-request-delete-group): Unselect group if necessary.

2008-06-14  Aidan Kehoe  <kehoea@parhasard.net>

	* gnus-util.el (gnus-put-display-table, gnus-get-display-table):
	New macros that expand to an `aset'/`aref' call under Emacs, and to a
	runtime choice under XEmacs.

	* gnus-sum.el (gnus-summary-set-display-table):
	Use `gnus-put-display-table', `gnus-get-display-table',
	`gnus-set-display-table' for the display table, instead of `aset'.
