@@ -1,3 +1,11 @@
+2008-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-article-save): Ignore gnus-visible-headers that is
+	set as a group parameter.
+	(gnus-summary-save-in-pipe): Work when it is called independently.
+	(gnus-summary-pipe-to-muttprint): Don't modify
+	gnus-summary-pipe-output-default-command.
+
 2008-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* message.el (message-send-mail-with-sendmail):
